2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanel.cs: Implemented MeasureOverride, ArrangeOverride.
	
2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanel.cs: Added.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Various fixes. I give up for now because I do not understand how it works.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Fixed default value of TabStripPlacement.

2007-06-02  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Added a static constructor to ensure the theme styles are loaded before the class is used.

2007-06-02  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Implemented OnCreateAutomationPeer.

2007-06-02  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Finished stubbing.

2007-06-01  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Added.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Gave up on implementing IAddChild members for now.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Changed IsItemsHostProperty to match documentation.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Added ZIndex support.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Added background rendering.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Fixed typo in ShouldSerializeChildren().

2007-05-29  George Giolfan  <georgegiolfan@yahoo.com>

	* Canvas.cs: Fixed measurement.
	* Panel.cs: Disabled as it is not complete yet and Canvas can work without it.

2007-05-29  George Giolfan  <georgegiolfan@yahoo.com>

	* Canvas.cs, Panel.cs: Finished stubbing.

2007-05-28  George Giolfan  <georgegiolfan@yahoo.com>

	* Canvas.cs: Added.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBar.cs, Slider.cs: Switched to implemented RangeBase.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
